[package]
name = "qecstruct"
version = "0.2.0"
edition = "2018"

[lib]
name = "qecstruct"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
ldpc = "0.4.5"
pauli = "0.2.2"
pyo3 = { version = "0.14.1", features = ["extension-module", "abi3-py37"] }
rand = "0.8.4"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
serde = { version = "1.0.126", features = ["derive"] }
serde-pickle = "0.6.2"
serde_json = "1.0.65"
sparse-bin-mat = "0.6.0"
